* now the last `span` with `.tieba-image` following it as sibiling will be `display: block` instead of the `.tieba-image` itself * replace `px` unit with `rem` @ tiebaPostElements.css - no longer customize `::-webkit-scrollbar*` @ style.css @ styles
* remove `.param-input-group-text` on elements since they're all `.query-param .input-group-text`
* fix `#paramThreadProperties*` checkboxes wrapped down by replaceing `<div>` with `<template>`
@ `<QueryForm>`

* replace `window.scrollTo(...)` with `el.scrollIntoView()` @ `<Post>`
* move styles to override antdv components from global `<style>` to `:deep()` warped `<style scoped>` @ `<NavSidebar>`, `<QueryForm>` & `<ViewTable>`

* remove the overrides of `margin-{top,bottom}` of `.posts-nav-thread` and shrink `line-height`
* remove suffix `-item` and `-link` from class names `posts-nav-thread-item` & `posts-nav-reply-link`
* now the `padding-right` of `.posts-nav` is based on reactivity `scrollBarWidth` rather than hardcoded `10px`
@ `<NavSidebar>`

+ exported `getScrollBarWidth()` for `<NavSidebar>` @ shared/index.ts
* enlarge the `margin-top` of `.footer-outer` to `auto` to replace `#app > .container { flex-grow: 1; }` in `index.html` @ `<App>`
@ fe

--- a/fe/src/styles/style.css
+++ b/fe/src/styles/style.css
@@ -20,26 +20,3 @@ a {
         max-width: 100%;
     }
 }
-
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-    background-color: #f5f5f5;
-}
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    background-color: #f5f5f5;
-}
-::-webkit-scrollbar-thumb {
-    background-color: #f90;
-    background-image: -webkit-linear-gradient(
-        45deg,
-        rgba(255, 255, 255, .2) 25%,
-        transparent 25%,
-        transparent 50%,
-        rgba(255, 255, 255, .2) 50%,
-        rgba(255, 255, 255, .2) 75%,
-        transparent 75%,
-        transparent
-    )
-}
