--- a/fe/src/styles/tiebaPostElements.css
+++ b/fe/src/styles/tiebaPostElements.css
@@ -1,23 +1,22 @@
 .tieba-user-portrait-small {
-    width: 25px;
-    height: 25px;
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
 }
 .tieba-user-portrait-large {
-    width: 90px;
-    height: 90px;
+    width: 6rem;
+    height: 6rem;
+    object-fit: contain;
 }
 
 .tieba-image {
-    width: 150px; /* to prevent it shrink to 0x0px */
-    height: 150px;
+    width: 12.5rem;
+    height: 12.5rem;
+    object-fit: contain;
     margin: .25rem;
     cursor: zoom-in;
 }
-/*
- * workaround to simulate https://stackoverflow.com/questions/1817792/is-there-a-previous-sibling-selector/15503444#15503444
- * with this approach, only the first image directly after any span and first span after image will occupy the whole row
- */
-span + .tieba-image {
+span:has(+ .tieba-image) {
     display: block;
 }
 .tieba-image + span {
